@@ -13,6 +13,9 @@
      [ssh-keysign.c ssh.c]
      Use permanently_set_uid() in ssh and ssh-keysign for consistency, matches
      change in Portable; ok markus@ (CVS ID sync only)
+   - dtucker@cvs.openbsd.org 2004/08/23 14:29:23
+     [ssh-keysign.c]
+     Remove duplicate getuid(), suggested by & ok markus@
 
 20040828
  - (dtucker) [openbsd-compat/mktemp.c] Remove superfluous Cygwin #ifdef; from
@@ -1680,4 +1683,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3525 2004/08/29 06:31:28 dtucker Exp $
+$Id: ChangeLog,v 1.3526 2004/08/29 06:32:59 dtucker Exp $
